--- a/morgane.css
+++ b/morgane.css
@@ -16,10 +16,24 @@
     background-color: beige;
     min-height: 800px;
     
-    max-width: 1000px;
-    min-width: 600px;px);
+    border-radius: 30px;
+    max-width: 1040px;
+    min-width: 600px;
     margin: 30px;
     padding: 30px;
+  }
+
+  .container {
+
+    display: flex;
+
+    
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  
+  gap: 2em;
   }
 
   h1 {
@@ -31,4 +45,32 @@
   h2 {
     font-family: sans-serif;
     text-align: center;
+  }
+
+  section{
+    max-width: 500px;
+    min-height: 320px;
+    background-color:slateblue;
+    border-radius: 15px;
+  }
+
+  ul {
+    padding: 30px;
+    font-family: sans-serif;
+    font-size: 18px;
+    color: white;
+    line-height: 1.4;
+  }
+
+  h3 {
+    padding: 30px;
+    font-family: sans-serif;
+    font-size: 25px;
+    color: white;
+  }
+
+  section img {
+
+    border-radius: 15px;
+    max-width: 500px;
   }
