--- a/morgane.css
+++ b/morgane.css
@@ -7,6 +7,8 @@
     /* define the width of the body: */
     margin-left: auto;
     margin-right: auto;
+    max-width: 1200px;
+  min-width: 600px;
     background-color: black;
     background-image: url(../img/background.jpg);
     background-size: 100%;
